# CGOpenGL

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
TrabalhoCG/: .project
TrabalhoCG/src/algorithms/clipping/: LineClipping.java
TrabalhoCG/src/algorithms/drawfigure/: DrawCircle.java
TrabalhoCG/src/algorithms/drawline/: DrawLine.java
TrabalhoCG/src/algorithms/rasterisation/: DrawCircle.java  DrawLine.java
TrabalhoCG/src/algorithms/transformation/: AllTransformations.java
TrabalhoCG/src/entity/: Entity.java
TrabalhoCG/src/entity/geometry/: Circle.java  Line.java  LineType.java  Transformation2D.java  Vertex.java
TrabalhoCG/src/entity/ui/: Button.java
TrabalhoCG/src/input/: MouseInput.java
TrabalhoCG/src/main/: Main.java  SceneHandler.java
TrabalhoCG/src/scene/: CanvasController.java  CanvasScene.java  Scene.java  SceneState.java
TrabalhoCG/src/scene/canvas/: CanvasAction.java  CanvasController.java  CanvasScene.java  Transformations.java
my-helloworld/: Cargo.toml
my-helloworld/src/: main.rs
