CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT("CGOpenGL")

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE DEBUG)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 3.3 REQUIRED)

SET(SOURCE_FILES main.cpp)

ADD_EXECUTABLE(project ${SOURCE_FILES})

if(UNIX)
	TARGET_LINK_LIBRARIES(project glfw3 GLU X11 Xxf86vm Xrandr pthread Xi dl)
endif(UNIX)
if(WIN32)
	TARGET_LINK_LIBRARIES(project glfw3)
endif(WIN32)	
TARGET_LINK_LIBRARIES(project glfw3 OpenGL::GL)
